FIX: header, clean and normed

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mehdidesmartin <mehdidesmartin@student.    +#+  +:+       +#+         #
+#    By: mvogel <mvogel@student.42lyon.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/17 13:20:33 by mvogel            #+#    #+#              #
-#    Updated: 2023/03/19 21:07:52 by mehdidesmar      ###   ########lyon.fr    #
+#    Updated: 2023/03/21 13:52:34 by mvogel           ###   ########lyon.fr    #
 #                                                                              #
 # **************************************************************************** #
 
